# bitbucket-github-migrate

./: .gitignore  .travis.yml  README.md  bitbucket-github-migrate.cabal
app/: Main.hs
src/: Transfer.hs  Util.hs
src/API/: Bitbucket.hs  GitHub.hs
src/Migrate/: Steps.hs  Transfer.hs
src/Migrate/Internal/: Types.hs
test/: Spec.hs
