name:                bitbucket-github-migrate
version:             0.1.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/JustusAdam/bitbucket-github-migrate#readme
license:             BSD3
license-file:        LICENSE
author:              JustusAdam
maintainer:          dev@justus.science
copyright:           Copyright: (c) 2016 Justus Adam
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     API.Bitbucket
                     , API.GitHub
                     , Transfer
  other-modules:       Util
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , text
                     , time
                     , wreq
                     , http-types
                     , lens
                     , bytestring
                     , filepath
                     , directory
                     , cereal
                     , data-default
                     , transformers
                     , either
                     , mtl
                     , lifted-base
                     , classy-prelude
  default-language:    Haskell2010
  extensions:          NoImplicitPrelude

executable bitbucket-github-migrate-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bitbucket-github-migrate
                     , aeson
                     , bytestring
  default-language:    Haskell2010
  extensions:          NoImplicitPrelude

test-suite bitbucket-github-migrate-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , bitbucket-github-migrate
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  extensions:          NoImplicitPrelude

source-repository head
  type:     git
  location: https://github.com/JustusAdam/bitbucket-github-migrate
